<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MaterialAlertDialog.Material3.Body.Text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/search"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_edit_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/flag" />

    <TextView
        android:id="@+id/capital_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/capital"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/country_name_text_view" />


    <TextView
        android:id="@+id/popular_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/popular"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/capital_text_view" />


    <TextView
        android:id="@+id/language_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/popular_text_view" />


    <TextView
        android:id="@+id/result_of_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/number_of_popular"
        app:layout_constraintBottom_toBottomOf="@+id/popular_text_view"
        app:layout_constraintStart_toEndOf="@+id/popular_text_view"
        app:layout_constraintTop_toTopOf="@+id/popular_text_view" />

    <TextView
        android:id="@+id/country_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/country_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/result_of_capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/capital_name"
        app:layout_constraintBottom_toBottomOf="@+id/capital_text_view"
        app:layout_constraintStart_toEndOf="@+id/capital_text_view"
        app:layout_constraintTop_toTopOf="@+id/capital_text_view" />

    <TextView
        android:id="@+id/result_of_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Language"
        app:layout_constraintBottom_toBottomOf="@+id/language_text_view"
        app:layout_constraintStart_toEndOf="@+id/language_text_view"
        app:layout_constraintTop_toTopOf="@+id/language_text_view" />

    <TextView
        android:id="@+id/region_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/language_text_view" />
    <TextView
        android:id="@+id/result_of_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Region"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/region_text_view"
        app:layout_constraintStart_toEndOf="@+id/region_text_view"
        app:layout_constraintTop_toTopOf="@+id/region_text_view"
        />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Country name"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>